tests/syntax-error/__snapshots__/jsfmt.spec.js.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Syntax errors have the expected structure 1`] = `
{
  "codeFrame": "> 1 | <?php _
    |       ^",
  "fileName": "eval",
  "loc": {
    "start": {
      "column": 7,
      "line": 1,
    },
  },
}
`;
